fix: fixes on roles checking in the JwtServiceImpl, paths configuration in the application.yaml, + fixed refresh endpoint, so it correctly matches the refresh tokens in the AuthApplicationServiceImpl